# shooting-game-react-fastapi

./: CHANGED.md  README.md
backend/: .gitignore  README.md  gunicorn_config.py  init_db.py  pnpm-lock.yaml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/controllers/: auth_controller.py  leaderboard_controller.py
backend/app/models/: __init__.py  db_models.py  leaderboard.py  user.py
backend/app/services/: auth_service.py  database_service.py  user_service.py
backend/app/utils/: auth_dependency.py
backend/app/views/: __init__.py  auth.py  leaderboard.py
frontend/: .env  App.tsx  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts  vite-env.d.ts
frontend/components/: ArcadeCanvas.tsx
frontend/services/: apiService.ts  geminiService.ts
